# QWidget-FancyUI

./: .gitignore  CMakeLists.txt
cmake/: QFancyUIConfig.cmake.in
src/Fancy/: MSWidget.h
